# gitlab-linters

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  LICENSE  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: release-drafter.yml
.github/scripts/: set_version.py  update_version.py
.github/workflows/: ci.yml  codeql-analysis.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release-drafter.yml  release.yml
.gitlab/workflows/: ci.yml  publish-to-test-pypi.yml
gitlab_precommit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pre_commit_hooks/: gitlab_ci_lint.py  gitlab_script_check.py
pre_commit_hooks/gitlab_precommit.egg-info/: PKG-INFO  requires.txt
pre_commit_hooks/shared/: debug_mode.py  importer.py
tests/: .coverage  gitlab_linter_test.py  gitlab_script_test.py  import_test.py
tests/resources/test_imports/import_chain_1/: .gitlab-ci.yml  builds.yml  deploy.yml  test.yml
tests/resources/test_imports/import_chain_2/: .gitlab-ci.yml
tests/resources/test_imports/import_chain_2/folder_1/: deploy.yml  nested.yml
tests/resources/test_imports/import_chain_3/: .gitlab-ci.yml  builds.yml
tests/resources/valid_yaml/: Android.gitlab-ci.yml  Crystal.gitlab-ci.yml  valid_1.yml  valid_2.yml  valid_3.yml  valid_4.yml  valid_5.yml  valid_6.yml  valid_7.yml
