[metadata]
name=gitlab-precommit
version = 0.0.1
description=Pre-commit hooks to validate gitlab CI configuration.
;long_description = file: README.md
;long_description_content_type = text/markdown
url=https://github.com/jacobdonenfeld/gitlab-lint-hooks
author = Jacob Donenfeld
author_email=jedonenfeld@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = true
packages = find:
install_requires =
    PyYAML
    python-gitlab
    requests
    GitPython
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    gitlab-ci-linter = pre_commit_hooks.gitlab_ci_lint:main
    gitlab-ci-shellcheck = pre_commit_hooks.gitlab_script_check:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
max-line-length = 105
extend-ignore = E203 F841
exclude = .venv .pytest_cache tests/resources/*