[metadata]
name=gitlab-linters
version = file: pre_commit_hooks/VERSION
description=Tools to validate gitlab CI configuration.
;long_description = file: README.md
;long_description_content_type = text/markdown
url=https://github.com/jacobdonenfeld/gitlab-linters
author = Jacob Donenfeld
author_email=jedonenfeld@gmail.com
license = MIT
license_files = LICENSE
long_description_content_type=text/markdown
long_description=README.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = true
packages = find:
install_requires =
    lenses
    PyYAML
    python-gitlab
    requests
    GitPython
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    gitlab-lint = pre_commit_hooks.gitlab_ci_lint:main
    gitlab-shellcheck = pre_commit_hooks.gitlab_script_check:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 105
extend-ignore = E203 F841
exclude = .venv .pytest_cache tests/resources/*